Project

General

Profile

Actions

Bug #26898

closed

MDSMonitor: note ignored beacons/map changes at higher debug level

Added by Patrick Donnelly over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Urgent
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
task(easy)
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

https://github.com/ceph/ceph/blob/c6eb1c4a5aae28ded5cd30fb92c3e981bcbb9246/src/mon/MDSMonitor.cc#L402-L406

This may lead to the MDS getting removed from the MDSMap. It should be prominent in the log.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #26929: mimic: MDSMonitor: note ignored beacons/map changes at higher debug levelResolvedPrashant DActions
Copied to CephFS - Backport #26930: luminous: MDSMonitor: note ignored beacons/map changes at higher debug levelResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Subject changed from MDSMonitor: note ignored beacons at higher debug level to MDSMonitor: note ignored beacons/map changes at higher debug level
Actions #2

Updated by Patrick Donnelly over 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Patrick Donnelly over 5 years ago

  • Copied to Backport #26929: mimic: MDSMonitor: note ignored beacons/map changes at higher debug level added
Actions #5

Updated by Patrick Donnelly over 5 years ago

  • Copied to Backport #26930: luminous: MDSMonitor: note ignored beacons/map changes at higher debug level added
Actions #6

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF